# britannica-edition

./: .gitattributes  .gitignore  README.md  REBUILD_CHECKLIST.md  check_plate.py  check_tables.py  docker-compose.yml  plate_compare.md  pyproject.toml  rebuild.log.crashed  tmp_debug.db  xref_ambiguity.md  xref_coverage.md
data/: contributor_aliases.json  corrections.json  hyphen_map.json  reference_link_overrides.json  xref_adjudications.json
data/samples/: sample.txt
docs/: about.txt  canonical_path.md  download.txt  one-true-path-audit.md  plan_style_unification.md  plan_viewer_mechanical.md  plan_xref_resolution.md  rebuild_verification_2026-04-12.md  single-pass-export-refactor.md  status.md  status_history.md  sweeper_removal.md  title-display-split.md  topic_resolver_redesign.md  two-transform-places.md  vol29_major_markup.txt  xref_resolution_strategy.md
src/britannica/: captions.py  corrections.py  embeddings.py  image_assets.py  link_resolver.py  markers.py  math_widths.py  name_index.py  settings.py  topic_fisher.py  topic_geo.py  topic_subject.py  volumes.py
tests/: conftest.py
tests/integration/: conftest.py  test_article_export.py  test_backlinks_report.py  test_boundary_detection.py  test_boundary_detection_huss.py  test_boundary_detection_prefix_then_heading.py  test_egypt_realdata.py  test_page_cleanup_pipeline.py  test_prepare_wikitext.py  test_unresolved_xref_report.py  test_xref_resolution.py
tests/regression/: conftest.py  test_abbey.py  test_alloys.py  test_blank_verse.py  test_inline_snapshot.py  test_render_snapshot.py  test_transform_snapshots.py
tests/unit/: test_boundary_apostrophe.py  test_classifier.py  test_content_signature.py  test_contributor_resolver.py  test_elements.py  test_export_corpus.py  test_figure_decompose.py  test_fold_unfold.py  test_footer_initials.py  test_formatting.py  test_fuzzy_matching.py  test_genealogy_producer.py  test_hyphenation.py  test_image_layout_unwrap.py  test_lang_and_params.py  test_markers.py  test_name_index.py  test_plate_title.py  test_preprocess_discipline.py  test_primary_headword.py  test_producer_boundaries.py  test_reflow.py  test_roman.py  test_section_boundaries.py  test_shapes.py  test_signoff_recognition.py  test_style_block.py  test_styled_depth_invariance.py  test_styler_preprocess_move.py  test_table_decompose_nested.py  test_table_shared_leaf.py  test_title_parser.py  test_transform_v2.py  test_transform_v2_realdata.py  test_unicode_cleaner.py  test_unpaired_styler_marks.py  test_walker.py  test_whitespace.py  test_wrap_resolved_xrefs.py  test_xref_extractor.py  (+1 more)
tools/: build_contributor_table.py  build_hyphen_map.py  build_printed_pages.py  caption_quality_check.py  classify_scans.py  compare_detect_boundaries.py  deploy.sh  deploy_html.sh  download_images.py  extract_all_scans.py  extract_printed_pages.py  extract_scan.py  fetch_all.sh  fill_scan_map_gaps.py  find_leaked_attrs.py  find_template_examples.py  index_search.py  index_search_ec2.py  ocr_page_numbers.py  ocr_vol29_index.py  parse_classified_toc.py  postprocess.py  publish_hf.py  quality_check.py  quality_check_db.py  quality_check_vol.py  quality_report.py  rebuild_all.sh  rebuild_article.py  rebuild_article.sh  render_article.py  reprocess_article.py  run_volume.sh  serve.py  test_lighthouse_tables.py
tools/cloudfront/: article-router.js
tools/db/: check_connection.py  db.sh  dedup_contributors.py  rebuild_contributors.py  rebuild_volume.sh  sql.sh  truncate_all.py  verify_empty.py  wipe_volume.sh
tools/diagnostics/: _corpus_cache.py  _find_crashes.py  add_snapshot_from_production.py  audit_block_marker_anchoring.py  audit_brace2.py  audit_classifier_catchalls.py  audit_patch_img.py  (+86 more)
(+408 files in other folders)
