[project]
name = "britannica-edition"
version = "0.1.0"
description = "Pipeline for a faithful digital scholarly edition of the 11th Encyclopaedia Britannica"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "sqlalchemy>=2.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "typer>=0.12",
  "psycopg[binary]>=3.1",
  "requests>=2.33.0",
  "mwparserfromhell>=0.7.2",
  "wikitextparser>=0.56.4",
]

[project.scripts]
britannica = "britannica.cli.main:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Scope collection to the real suite.  Without this a bare `pytest` walks the
# whole tree and collects stray `test_*.py` scratch scripts under tools/_scratch
# (some reassign sys.stdout / do heavy corpus+DB work), which hangs for minutes
# and errors during collection.  `pytest` and `pytest tests/` now behave the same.
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest>=9.0.2",
]
